--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -5,49 +5,45 @@
   }
 }
 
-.wp-coinero-jquery-ui {
-  .ui-dialog {
-    .loading-wrapper {
+.jquery-modal .modal {
+  max-width: 1000px;
+  width: 96%;
+  .loading-wrapper {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    line-height: 40px;
+    font-size: 1.5em;
+    .loading {
       text-align: center;
-      margin-bottom: 20px;
-      margin-top: 20px;
-      line-height: 40px;
-      font-size: 1.5em;
-      .loading {
-        text-align: center;
-        font-size: 12px;
-        line-height: 16px;
-        border: 2px solid silver;
-        border-left-color: red;
-        border-right-color: gold;
-        border-radius: 100%;
-        width: 40px;
-        height: 40px;
-        display: inline-block;
-        margin: 20px;
-        animation-name: wp-coinero-rotation;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-    }
-
-    .loading-finished-wrapper {
-      display: none;
-      text-align: center;
-      margin-bottom: 20px;
-      margin-top: 20px;
-      p {
-        line-height: 40px;
-        font-size: 1.5em;
-      }
-      .actions {
-      }
+      font-size: 12px;
+      line-height: 16px;
+      border: 2px solid silver;
+      border-left-color: red;
+      border-right-color: gold;
+      border-radius: 100%;
+      width: 40px;
+      height: 40px;
+      display: inline-block;
+      margin: 20px;
+      animation-name: wp-coinero-rotation;
+      animation-duration: 2s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
     }
   }
 
-  .ui-widget-overlay {
-    opacity: 0.8;
+  .loading-finished-wrapper {
+    display: none;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    p {
+      line-height: 40px;
+      font-size: 1.5em;
+    }
+    .actions {
+    }
   }
 }
 
